src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__missing_pou_name_2.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected expression but found :=
  ┌─ <internal>:3:15
  │
3 │             a := 2;
  │               ^^ Unexpected token: expected expression but found :=

error[E007]: Unexpected token: expected KeywordSemicolon but found ':= 2'
  ┌─ <internal>:3:15
  │
3 │             a := 2;
  │               ^^^^ Unexpected token: expected KeywordSemicolon but found ':= 2'
